test_src/compiler_errors/types/arithmetic/AddBoolError3.b
class AddBoolError4 {
    void test() {
        Bool value = true;
        println(value += 2);
    }
}
